[gd_scene load_steps=3 format=3 uid="uid://cpcdvwlc6puyn"]

[ext_resource type="Texture2D" uid="uid://c7p8hksqygg5w" path="res://Popper/Resources/Bag.tres" id="1_e5w83"]
[ext_resource type="Script" path="res://Popper/Popcorn/Bag.gd" id="1_ig2cg"]

[node name="Bag" type="StaticBody2D"]
position = Vector2(-18, 160)
collision_layer = 4
collision_mask = 4
input_pickable = true
script = ExtResource("1_ig2cg")

[node name="Coating" type="Sprite2D" parent="."]
visible = false

[node name="Popcorn" type="Sprite2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_e5w83")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-11, 29, -26, -21, -20, -16, -15, -8, 17, -8, 21, -17, 25, -17, 10, 29)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(3.5, -1.5)
polygon = PackedVector2Array(-24.5, -16.5, -11.5, 27.5, 4.5, 27.5, 19.5, -14.5, 15.5, -18.5, 6.5, -23.5, -9.5, -24.5, -19.5, -21.5)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
